--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Exercise 1: Meet Jack</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <meta charset="UTF-8">
   </head>
   <body>
     <header>
